# friday-compiler

./: CMakeLists.txt  README.md  ast.json  run.bat
docs/: lexer.puml
examples/: example.fx
include/: CTypes.hpp  Error.inl  FormatString.inl  Token.hpp  Token.inl  Tokenizer.hpp  Tokenizer.inl  Visitable.hpp  Visitor.hpp  Visitor.inl  Wrappers.hpp  Wrappers.inl  ctest.h  fridayc.h  math.hpp
other/: Ast.cpp  Ast.hpp  Error.hpp  Expression.cpp  Expression.hpp  FormatString.hpp  Friday.hpp  Functors.hpp  Parser.hpp  ParserExprRules.cpp  Statement.hpp  Token.hpp  Tokenizer.inl  Traits.hpp  Traits.inl  Wrappers.hpp  Wrappers.inl
src/: Parser.cpp  ParserStmtRules.cpp  Statement.cpp  hash_table.c  main.c  main.cpp  token.c  tokenizer.c  util.c
tests/: test_hash_table.c  test_test.cpp  test_token.c
